<resources>
    <string name="app_name">UML Books</string>
    <string name="app_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please enter an email address and password.</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Log In.</string>
    <string name="login_error_message">Please enter an email address and password.</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="signup_invaild_email_message">Please enter a valid UMass Lowell email address.</string>
    <string name="logout">Log Out</string>
    <string name="search_hint">Search by 13 digit ISBN</string>
    <string name="nfound">We could not find any books</string>
    <string name="edit">Edit</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes in the product information. Do you want to continue?</string>
    <string name="select_image">Select Image</string>
    <string name="take_pic">Take Picture</string>
    <string name="delete_message">Are you sure you want to proceed with the deletion?</string>
    <string name="title_activity_add">Add a Book</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="newb">New</string>
    <string name="fine">Fine</string>
    <string name="very_good">Very Good</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="unknown">Unknown</string>
    <string name="Account">Account</string>
    <string name="viewactivity">View Activity</string>
    <string name="display_all">Display all</string>
    <string name="or">Upload an Image</string>
    <string name="title">Enter Title</string>
    <string name="isbn_13">Enter ISBN-13</string>
    <string name="condition">Condition</string>
    <string name="image">Image</string>
    <string name="gettitle">Get Title</string>
    <string name="info">Info</string>
    <string name="pricedollarsign">Price $</string>
    <string name="item">Item</string>
    <string name="image_buyer">image_buyer</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="image_view">image_view</string>
    <string name="open_camera">Open Camera</string>
    <string name="process">Process</string>
    <string name="no_text">No Text</string>
    <string name="book">Book</string>
    <string name="send_mail">Send Mail</string>
    <string name="recipient">Recipient</string>
    <string name="subject">Subject</string>
    <string name="message_body">Message Body</string>
    <string name="image_title_update">image_title_update</string>
    <string name="n_a">n/a</string>
    <string name="update">Update</string>
</resources>
